--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
   },
   "homepage": "https://github.com/Vince-Rdv/Tank_Tactics#readme",
   "dependencies": {
+    "@discordjs/rest": "^0.2.0-canary.0",
+    "axios": "^0.24.0",
     "colors": "^1.4.0",
+    "discord-api-types": "^0.26.1",
+    "discord.js": "^13.5.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "socket.io": "^4.4.0"
   }
