Refactoring server.js and gameState

--- a/dot.env
+++ b/dot.env
@@ -1,1 +1,2 @@
-CLIENT_TOKEN='NDM3NjY2MjExMTQ5NTEyNzE0.WtzGbA.gLgTfL5XGtF8biYI6V-9GS7ntKM'
+EXP_PORT=3000
+DIS_TOKEN=NDM3NjY2MjExMTQ5NTEyNzE0.WtzGbA.mbPhHUQxGgtGOou6OcUT2_EZ7Tc
