--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@discordjs/rest": "^0.2.0-canary.0",
     "axios": "^0.24.0",
     "colors": "^1.4.0",
+    "config": "^3.3.6",
     "discord-api-types": "^0.26.1",
     "discord.js": "^13.5.0",
     "dotenv": "^10.0.0",
